objects/Geo_Location__c.object
<CustomObject>
    <fields>
        <fullName>AP_FS_LTP_Territory_Code__c</fullName>
        <description>AP/FS/LTP Territory Codes to be used for commissions on the Territory Revenue records</description>
        <inlineHelpText>AP/FS/LTP Territory Codes to be used for commissions on the Territory Revenue records</inlineHelpText>
        <label>AP/FS/LTP Territory Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AQ_Territory__c</fullName>
        <description>Aquatics Territory used for commissions on the Territory Revenue records</description>
        <inlineHelpText>Aquatics Territory used for commissions on the Territory Revenue records</inlineHelpText>
        <label>AQ Territory</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aquatics_Territory_Code__c</fullName>
        <description>Aquatics Territory Codes to be used for commissions on the Territory Revenue records</description>
        <inlineHelpText>Aquatics Territory Codes to be used for commissions on the Territory Revenue records</inlineHelpText>
        <label>Aquatics Territory Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_UC__c</fullName>
        <formula>UPPER(City__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City UC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coordinates__c</fullName>
        <label>Coordinates</label>
        <required>true</required>
        <scale>4</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Unit_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Unit Code</label>
        <referenceTo>GL_Unit_Code__c</referenceTo>
        <relationshipLabel>Geo Locations</relationshipLabel>
        <relationshipName>Geo_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Land_Territory__c</fullName>
        <description>Land Territory used for commissions on the Territory Revenue records</description>
        <inlineHelpText>Land Territory used for commissions on the Territory Revenue records</inlineHelpText>
        <label>Land Territory</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <externalId>true</externalId>
        <label>Postal Code</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>State_Abbreviation__c</fullName>
        <label>State Abbreviation</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_UC__c</fullName>
        <formula>UPPER(State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State UC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Geo Location</label>
    <nameField>
        <displayFormat>GL-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Geo Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>